@startuml architecture
!theme plain
skinparam backgroundColor #FAFAFA
skinparam defaultFontName monospaced
skinparam ArrowColor #444444
skinparam nodesep 22
skinparam ranksep 45
skinparam componentStyle rectangle
skinparam component {
  BorderColor #666666
  BackgroundColor #ffffff
}
skinparam rectangle {
  BorderColor #888888
}

title Joxette — Overall Architecture

' =========================================================================
' External systems (rendered top & bottom for a cleaner layout)
' =========================================================================
cloud "Apache Kafka" as kafka #fff8e1

' =========================================================================
' Joxette service (Maven module: joxette-service)
' Solid borders highlight the Maven-module boundaries — joxette-core holds
' the replay engine + DTOs + SPIs, joxette-kafka holds the Kafka RecordSink,
' joxette-service wires DuckLake storage + Spring controllers on top.
' =========================================================================
rectangle "joxette-service (Spring Boot)" as joxette #f0f4ff {

  component [REST API\n(Spring Boot controllers)] as api

  rectangle "Recording (per topic)" as recording #e8f5e9 {
    component [KafkaConsumer\n(jox-kafka)]              as consumer
    component [MessageRouter\n(extract + route)]        as router
    component [CassetteBatchWriter\n(general)]          as generalWriter
    component [EntityCassetteBatchWriter\n(entity)]     as entityWriter
    component [KnownEntitiesRepository]                 as knownEntities
  }

  rectangle "Replay" as replayBox #e3f2fd {
    rectangle "joxette-core" as coreBox #e8eaf6 {
      component [ReplayEngine\n(orchestrator)]                          as engine
      component [MessageTransformer\n(restamp + substitution)]          as transformer
      interface  "CassetteSource"        as cassetteSourceSpi
      interface  "EntityCassetteSource"  as entitySourceSpi
      interface  "RecordSink"            as recordSinkSpi
    }
    component [TopicReplayService\n(impl CassetteSource)]        as topicReplay
    component [EntityReplayService\n(impl EntityCassetteSource)] as entityReplay

    rectangle "joxette-kafka" as kafkaBox #e0f2f1 {
      component [KafkaRecordSink\n(impl RecordSink)] as kafkaSink
    }
    component [KafkaRecordSinkFactory\n(per-broker producer cache)] as sinkFactory
  }

  rectangle "Maintenance" as maintenance #fce4ec {
    component [CompactionService]        as compaction
    component [RetentionService]         as retention
    component [CassetteLifecycleService] as lifecycle
    component [Schedulers]               as schedulers
  }

  database "DuckDB + DuckLake\n(catalog + inline buffer)" as duckdb
}

' =========================================================================
' Test-kit: consumes the same SPIs with in-memory sources + capturing sink
' =========================================================================
rectangle "joxette-test-kit (optional)" as testkit #fffde7 {
  component [InMemoryCassetteSource\n+ InMemoryEntityCassetteSource] as memSources
  component [CapturingRecordSink]                                    as capSink
  component [ReplayEngineBuilder]                                    as testBuilder
}
testBuilder ..> engine          : wires
memSources  ..|> cassetteSourceSpi
memSources  ..|> entitySourceSpi
capSink     ..|> recordSinkSpi

database "DuckDB Catalog\n(.ducklake file)"              as catalog
storage  "Object Storage\n(S3 / GCS / Azure)\nParquet"   as s3

' =========================================================================
' Recording (Kafka -> router -> writers -> DuckLake)
' =========================================================================
kafka         --> consumer      : consume
consumer      --> router        : Flow<KafkaMessage>
router        --> generalWriter
router        --> entityWriter
generalWriter --> duckdb        : general_{topic}
entityWriter  --> duckdb        : entity_{type}
entityWriter  --> knownEntities : upsert
knownEntities --> duckdb

' =========================================================================
' REST API surface
' =========================================================================
api --> topicReplay  : GET /cassettes/topics/**
api --> entityReplay : GET /cassettes/entities/**
api --> engine       : POST replay-to-topic
api --> compaction   : /compaction/**
api --> retention    : /retention/**
api --> lifecycle    : /cassettes/**/compact\n/snapshots/**

' =========================================================================
' Replay (engine streams from services, transforms, sends via sink)
' =========================================================================
engine       --> topicReplay  : streamAll
engine       --> entityReplay : streamEntityEvents
engine       --> transformer  : per record
engine       --> sink         : RecordSink.send()
topicReplay  --> duckdb
entityReplay --> duckdb
sink         --> kafka        : KafkaProducer.send()

' =========================================================================
' Maintenance
' =========================================================================
schedulers --> compaction : cron
schedulers --> retention  : cron
compaction --> duckdb     : merge_adjacent_files
retention  --> duckdb     : DELETE old rows
lifecycle  --> duckdb     : EXPORT/IMPORT

' =========================================================================
' Storage
' =========================================================================
duckdb --> catalog : CHECKPOINT
duckdb --> s3      : Parquet flush\n(httpfs)

@enduml
